# rm07

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .prettierignore  .vscode-extensions.json.example  DEPLOY.md  README.md  commitlint.config.cjs  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  security.yml
apps/ai-svc/: Dockerfile  pyproject.toml
apps/ai-svc/app/: __init__.py  main.py  settings.py
apps/ai-svc/app/models/: registry.py
apps/ai-svc/tests/: test_health.py
apps/api/: .env.example  Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: app.bootstrap.spec.ts  app.module.ts  main.ts
apps/api/src/ai-mode/: ai-mode.controller.spec.ts  ai-mode.controller.ts  ai-mode.module.ts  ai-verdict.service.spec.ts  ai-verdict.service.ts  anthropic-client.spec.ts  anthropic-client.ts  dhan-historical-signals.provider.spec.ts  dhan-historical-signals.provider.ts  drizzle-register.repository.ts  indicators.spec.ts  indicators.ts  ports.ts  stub-signals.provider.ts  types.ts  verdict-schema.spec.ts  verdict-schema.ts
apps/api/src/auth/: auth-exception.filter.ts  auth.controller.spec.ts  (+21 more)
apps/md-svc/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/md-svc/src/: config.ts  index.ts
apps/web/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/public/: manifest.webmanifest
docs/adr/: 0000-template.md  0001-stack-and-repo-conventions.md
infra/: README.md
infra/terraform/: main.tf  terraform.tfvars.example  variables.tf  versions.tf
(+80 files in other folders)
